# kucoin-rs

./: Cargo.toml  LICENSE  README.md
examples/btc-klines/: main.rs
examples/btc-ticker/: main.rs
examples/get-orders/: main.rs
examples/live-order-book/: main.rs
src/: client.rs  error.rs  lib.rs  pagination.rs  spot.rs  time.rs  utils.rs
src/spot/: market.rs  service.rs  trade.rs  user.rs  ws.rs
