[package]
name = "kucoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-tungstenite = { version = "0.16", features = ["tokio-native-tls"] }
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
futures-util = "0.3"
hmac = "0.12"
num-derive = "0.3"
num-traits = "0.2"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde-value = "0.7"
sha2 = "0.10"
snafu = "0.7.0-beta.2"
tokio = { version = "1", features = ["macros", "parking_lot", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "parking_lot", "sync", "time", "rt-multi-thread"] }
