[package]
name = "kucoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-tungstenite = { version = "0.22", features = ["tokio-native-tls"] }
base64 = "0.21"
derive_more = "0.99"
futures-util = "0.3"
hmac = "0.12"
num-derive = "0.4"
num-traits = "0.2"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["time_0_3"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde-value = "0.7"
sha2 = "0.10"
snafu = "0.7"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "parking_lot", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = [
	"macros",
	"parking_lot",
	"sync",
	"time",
	"rt-multi-thread",
] }
